--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <title>Node.js</title>
+    <title>Node.js - Index</title>
 </head>
 <style>
     .text-center {
@@ -19,18 +19,23 @@
     }
 </style>
 <body>
-   <header>
-    
    <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="#">Crash couse Node.JS (Basic) </a>
   </nav>
-  <div class="container">
+  <div class="container" style="margin-bottom: 50px; margin-top: 50px;">
     <div class="row">
         <div class="col-md-3 col-6 text-center" text-center><button type="button" class="btn btn-light"><a href="/">index page</a></button></div>
         <div class="col-md-3 col-6 text-center"><button type="button" class="btn btn-light"><a href="/about">about page</a></button></div>
         <div class="col-md-3 col-6 text-center"><button type="button" class="btn btn-light"><a href="/apis/users">JSON mock user</a></button></div>
         <div class="col-md-3 col-6 text-center"><button type="button" class="btn btn-light"><a href="/apis/posts">JSON mock post</a></button></div>
    </div>
+  </div>
+
+  <div class="jumbotron jumbotron-fluid" style="height: 70vh; background-color: #fffef1;">
+    <div class="container">
+      <h1 class="display-4">Index Page</h1>
+      <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam ex asperiores, tempore libero fugiat delectus rerum voluptatibus saepe maxime voluptas tempora nihil quas aliquam dolorum commodi provident ab facere mollitia?.</p>
+    </div>
   </div>
    
 
